rework of the shape class to be easier to read